Fix reload page jump

--- a/docs/src/.vuepress/styles/index.styl
+++ b/docs/src/.vuepress/styles/index.styl
@@ -7,6 +7,13 @@
 *, *::before, *::after
   box-sizing border-box
 
+html::-webkit-scrollbar
+  display none
+
+html
+  -ms-overflow-style none /* IE and Edge */
+  scrollbar-width none
+
 body
   -webkit-font-smoothing subpixel-antialiased
   overflow-x hidden
